first push of 2020

--- a/about.html
+++ b/about.html
@@ -66,6 +66,7 @@
     </header>
 
   <div class="container">
+    <a name="thetop"></a>
     <div class="da-back-button">
         <!-- <a class="btn btn-primary btn-lg" href="#">Go Back</a> -->
           <script>
@@ -82,7 +83,140 @@
     <div class="service_container">
       <div class="row">
         <div class="col-sm-8">
-            <p>In 2008, Roy Van Houten, Wildlife Biologist, CE, PWS, CPESC, AWB, concentrated his passions derived from his full-time career as an Environmental Consultant to create a company specializing in his field of passion- Land & Wildlife Management Services. Roy’s company provides various Land and Wildlife Management Services to land owners, cattle ranchers, equestrian estates, vineyards, and home owners associations to develop and implement plans that “maximize a property’s natural potential”. Hunt Country has provided Land and Wildlife Management Services, including native grasses and wildflower meadow establishment, wildlife viewing food plots, food plots and dove field, nature trail design and establishment, invasive plant species control, pond treatment, and nuisance wildlife control on over ten thousand acres of property located in central and northern Virginia.</p>
+
+<br>
+            <p style="text-align:center;" class="display-4"><strong class="navbar-brand">HUNT COUNTRY WILDLIFE (HWC) MISSION:</strong></p>
+<br>
+<div id="topwrapper">
+            <p>Restoring lands, with a science-based approach, back to their fullest natural native potential
+            Hunt Country seeks to help landowners “maximize a property’s natural potential”  resulting in the conversion of thousands of acres back to native habitat. Through collaboration with landowners, and a scientifically based approach, HCW sees enormous potential to save and restore an abundance of wildlife habitat.</p>
+ </div>
+<br>
+<br>
+<br>
+<br>
+            <p style="text-align:center;"><strong class="navbar-brand">LEARN MORE</strong></p>
+<br>
+
+    <p class="navbar-brand"><a href="#BIO">BIO</a> &nbsp;| &nbsp;<a href="#ROY">MEET ROY VAN HOUTEN</a> &nbsp;| &nbsp;<a href="#CERTS">CERTIFICATIONS</a> &nbsp;| &nbsp;<a href="#SPEAK">SPEAKING ENGAGEMENTS</a></p>
+
+<br>
+
+<br>
+<br>
+<br>
+
+
+
+<div id="aboutwrapper">
+            <p id="BIO"><strong class="display-4 navbar-brand">COMPANY BIO:</strong></p>
+            <a href="#thetop"id="top">Back to the Top</a>
+            <br>
+
+        <a id="flower" class="col-lg-3 col-md-4 col-xs-6" data-fancybox="gallery" href="images/2020photos/IMG_0270.jpg">
+               <img class="img-fluid" src="images/2020photos/IMG_0270.jpg" alt="">
+             </a>
+
+            <p id="aboutjustify">Roy Van Houten, Wildlife Biologist, CE, PWS, CPESC, AWB,
+            Founded in 2008, Hunt Country provides various Land and Wildlife Management Services to land owners, cattle ranchers, equestrian estates, vineyards, and home owners associations to develop and implement plans that “maximize a property’s natural potential”. Hunt Country has provided Land and Wildlife Management Services, including native grasses and wildflower meadow establishment, wildlife viewing food plots, nature trail design and establishment, invasive plant species control, pond treatment, and nuisance wildlife control on over ten thousand acres of property located in central and northern Virginia.</p>
+
+
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+</div>
+
+
+<div id="aboutwrapper1">
+
+            <p id="ROY"><strong class="navbar-brand">MEET ROY VAN HOUTEN:</strong></p>
+            <a href="#thetop"id="top">Back to the Top</a>
+<br>
+<a data-fancybox="gallery" href="images/2020photos/RVH.png">
+    <img id="horn" class="col-sm-8" src="images/2020photos/RVH.png" alt="">
+  </a>
+            <p id="aboutjustify"> Roy’s love for the outdoors started early in life as he spent his time exploring the Pine Barrens and the salt marshes surrounding Barnegat Bay in Southern New Jersey. His experience has deepened as his career grew from his first job as  wildland firefighter with the New Jersey Forest Fire Service to now serving  as a managing member of one of the premiere full service environmental and cultural consulting firms in the Mid-Atlantic. For the last 20 years, he has been responsible for the development and management of a large portion of the company, with oversight of upwards of 70 staff and managing projects that stretched across the continental United States. Following the company’s acquisition by an international consulting company, Roy now spearheads the company’s efforts to provide innovative solutions to clients, so they can implement large scale restoration projects that help turn their liabilities into assets, which ultimately enhances the client’s corporate sustainability portfolio.
+            </p>
+<br>
+            <p id="aboutjustify">In recent years Mr. Van Houten has become recognized as an authority on native meadow restoration on a national level. He is called upon frequently to speak about the importance that native meadow and pollinator habitat restoration has on local and migratory species including the Monarch Butterfly.
+            </p>
+<br>
+            <p id="aboutjustify">
+            Mr. Van Houten jumps at every opportunity in sharing his passion for the outdoors with those around him. He has coordinated and participated in countless Wounded Warrior events, kids fishing and hunting days, and Women in the Outdoors event. He has been an extremely active with the Wildlife Foundation of Virginia (WFV) and has been on the WFV Board of Directors since 2014.
+            </p>
+
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+
+
+    </div>
+
+<div id="aboutwrapper2">
+
+            <p id="CERTS"><strong class="navbar-brand">CERTIFICATIONS:</strong></p>
+            <a href="#thetop"id="top">Back to the Top</a>
+<br>
+
+                <p>
+                <ol>
+                 <li>Certified Ecologist (CE) Professional Wetland Scientist (PWS)</li>
+                 <li>Associate Wildlife Biologist (AWB) </li>
+                 <li>Certified Professional of Erosion and Sediment Control (CPESC)</li>
+                 <li>Certified Erosion, Sediment, and Storm Water Inspector (CESSWI)</li>
+                 <li>Certified Wildlife Control Professional (CWCP)</li>
+                 <li>Virginia Department of Forestry - Certified Prescribed Burn Manager</li>
+                 <li>Certified and Licensed Commercial Pesticide Applicator </li>
+                 <li> Rosgen Level I – Applied River Geomorphology Certification</li>
+                 <li> Rosgen Level II – River Morphology and Applications Certification </li>
+                 <li>Quality Deer Management Association – Certified Deer Steward Levels I & II</li>
+                </ol>
+      </p>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+
+      </div>
+
+
+<div id="aboutwrapper3">
+
+<p>
+<ol>
+
+        <p id="SPEAK"><strong class="navbar-brand">SPEAKING ENGAGEMENTS:</strong></p>
+        <a href="#thetop"id="top">Back to the Top</a>
+        <br>
+                <li><a href="https://efw.nwtf.org/" target="_blank">The National Wild Turkey Federation (NWTF) National Conference</a></li>
+                <li><a href="https://treesandutilities.org" target="_blank">The Utility Arborists Association and Arbor Day Association Trees and Utilities Conference</a></li>
+                <li><a href="https://www.cobleskill.edu/" target="_blank">Guest Lecturer, State University of New York College of Agriculture and Technology at Cobleskill</a></li>
+                <li><a href="https://www.appalachianveg.org/" target="_blank">The Appalachian Vegetation Management Association</a></li>
+                <li><a href="https://www.northeastgas.org/index.php" target="_blank">The Northeast Gas Association</a></li>
+                <li><a href="https://www.southerngas.org/" target="_blank">The Southern Gas Association</a></li>
+                <li><a href="https://tvma.net/" target="_blank">The Texas Vegetation Management Association</a></li>
+                <li><a href="http://mtn-lake.org/" target="_blank"> Mountain Lake Herbicide Conference</a></li>
+                <li><a href="https://www.facebook.com/FloridaVMA/" target="_blank"> Florida Vegetation Management Association</a></li>
+                <li><a href="https://www.ieca.org/" target="_blank">  Mid-Atlantic Chapter, International Erosions Control Association</a></li>
+                <li><a href="https://www.mac-isa.org/" target="_blank">Mid-Atlantic Chapter, International Society of Arboriculture</a></li>
+                <li><a href="https://www.wildlifehc.org/" target="_blank">The Wildlife Habitat Council</a></li>
+
+              </ol>
+              </p>
+
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+</div>
+
+
      </div>
    </div>
  </div>
@@ -93,74 +227,89 @@
           <br>
           <br>
           <br>
-          <h1 class="display-3 text-center text-white mt-4">Our Services</h1>
-            <div class="row">
-              <div class="col-sm-4 my-4">
-                <a href="pm.html">
-                <div class="card">
-                  <img class="card-img-top" src="./images/with-hunter.jpg" alt="">
-                  <div class="card-body">
-                    <h4 class="card-title">Property Management</h4>
-                  </a>
-                  </div>
+          <div>
+                    <h1 class="display-3 text-center text-white mt-4">Our Services</h1>
+          <br>
+              <div class="row" id="servicerow">
+                        <div id="centercardrow" class="col-sm-3 my-2">
+                          <a href="pm.html">
+                          <div class="card">
+                            <img class="card-img-top" src="./images/with-hunter2.jpg" alt="">
+                            <div class="card-body">
+                              <h4 class="card-title">Property Management</h4>
+                            </a>
+                            </div>
+                          </div>
+                        </div>
+                        <div id="centercardrow" class="col-sm-3 my-2">
+                            <a href="wdm.html">
+                          <div class="card">
+                            <img class="card-img-top" src="./images/BuckPhoto2.jpg" alt="">
+                            <div class="card-body">
+                              <h4 class="card-title">Whitetail Deer Management</h4>
+                            </a>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-sm-3 my-2">
+                          <a href="pondm.html">
+                          <div class="card">
+                            <img class="card-img-top" src="./images/Pond_Mist_Cattails.jpg" alt="">
+                            <div class="card-body">
+                              <h4 class="card-title">Pond Management</h4>
+                              </a>
+                            </div>
+                          </div>
+                        </div>
+                        <div id="centercardrow" class="col-sm-3 my-2">
+                            <a href="restoration.html">
+                          <div class="card">
+                            <img class="card-img-top" src="./images/2020photos/IMG_0336.jpg" alt="">
+                            <div class="card-body">
+                              <h4 class="card-title">Habitat Restoration</h4>
+                            </a>
+                            </div>
+                          </div>
+                        </div>
                 </div>
-              </div>
-              <div class="col-sm-4 my-4">
-                  <a href="wdm.html">
-                <div class="card">
-                  <img class="card-img-top" src="./images/BuckPhoto.jpg" alt="">
-                  <div class="card-body">
-                    <h4 class="card-title">Whitetail Deer Management</h4>
-                  </a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-sm-4 my-4">
-                <a href="nwc.html">
-                <div class="card">
-                  <img class="card-img-top" src="./images/CanadaGeese.jpg" alt="">
-                  <div class="card-body">
-                    <h4 class="card-title">Nuisance Wildlife Control</h4>
-                  </a>
-                  </div>
-                </div>
-              </div>
 
-            </div>
-            <!-- /.row -->
-            <div class="row">
-              <div class="col-sm-4 my-4">
-                <a href="pondm.html">
-                <div class="card">
-                  <img class="card-img-top" src="./images/Pond_Mist_Cattails.jpg" alt="">
-                  <div class="card-body">
-                    <h4 class="card-title">Pond Management</h4>
-                    </a>
-                  </div>
+              <div class="row" id="servicerow">
+                        <div class="col-sm-3 my-2">
+                          <a href="nwc.html">
+                          <div class="card">
+                            <img class="card-img-top" src="./images/CanadaGeese2.jpg" alt="">
+                            <div class="card-body">
+                              <h4 class="card-title">Nuisance Wildlife Control</h4>
+                            </a>
+                            </div>
+                          </div>
+                        </div>
+                        <div id="centercardrow"class="col-sm-3 my-2">
+                          <a href="gallery.html">
+                          <div class="card">
+                            <img class="card-img-top" src="./images/Grapevines.jpg" alt="">
+                            <div class="card-body">
+                              <h4 class="card-title">Gallery</h4>
+                            </a>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-sm-3 my-2">
+                          <a href="cc.html">
+                          <div class="card">
+                            <img class="card-img-top" src="./images/trappehill1.jpg" alt="">
+                            <div class="card-body">
+                              <h4 class="card-title">Client Case Studies</h4>
+                            </a>
+                            </div>
+                          </div>
+                        </div>
                 </div>
-              </div>
-              <div class="col-sm-4 my-4">
-                <a href="cc.html">
-                <div class="card">
-                  <img class="card-img-top" src="./images/trappehill1.jpg" alt="">
-                  <div class="card-body">
-                    <h4 class="card-title">Client Case Studies</h4>
-                  </a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-sm-4 my-4">
-                <a href="gallery.html">
-                <div class="card">
-                  <img class="card-img-top" src="./images/Grapevines.jpg" alt="">
-                  <div class="card-body">
-                    <h4 class="card-title">Gallery</h4>
-                  </a>
-                  </div>
-                </div>
-              </div>
 
-            </div>
+                      <!-- /.row -->
+
+
+                    </div>
           </div>
 
           <!--  service card ends-->
@@ -168,7 +317,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
-        <h5 class="m-0 text-center text-white">Copyright &copy; M.Simmons 2018</h5>
+        <h5 class="m-0 text-center text-white">Copyright &copy; M.Simmons 2020</h5>
       </div>
       <!-- /.container -->
     </footer>
