--- a/cc.html
+++ b/cc.html
@@ -75,21 +75,20 @@
 
 
     <h1 class="display-3 text-center text-white mt-4">Client Case Studies</h1>
-
+<br>
 <!-- Page Content -->
-<div class="service_container">
+<div id="topwrapper" class="service_container">
 
 <div class="row">
 <div class="col-sm-8">
 
-  <p><strong class="navbar-brand">Trappe Hill Farm (2002-Present)</strong></p>
-
+  <p><strong id="midhead">Trappe Hill Farm (2002-Present)</strong></p>
+<br>
   <p>Hunt Country Wildlife Management Services actively manages this 750-acre equine and cattle farm in Upperville.</p>
 <br>
   <p>
     <strong>Management Services Include:</strong>
   </p>
-
 <p>
   <ul>
     <li>Wildlife Habitat Enhancement/Buffer and Corridor Creation</li>
@@ -102,9 +101,13 @@
     <li>Quality Deer Management Program</li>
   </ul>
 </p>
-<br>
-<p><strong class="navbar-brand">White Hall Farm (2006 - Present)</strong></p>
 
+
+<br>
+<br>
+
+<p><strong id="midhead">White Hall Farm (2006 - Present)</strong></p>
+<br>
 <p>Hunt Country Manages this 900+ acre crop land in The Plains.</p>
 <br>
 <p>
@@ -131,74 +134,89 @@
           <br>
           <br>
           <br>
-          <h1 class="display-3 text-center text-white mt-4">Our Services</h1>
-            <div class="row">
-              <div class="col-sm-4 my-4">
-                <a href="pm.html">
-                <div class="card">
-                  <img class="card-img-top" src="./images/with-hunter.jpg" alt="">
-                  <div class="card-body">
-                    <h4 class="card-title">Property Management</h4>
-                  </a>
-                  </div>
+          <div>
+                    <h1 class="display-3 text-center text-white mt-4">Our Services</h1>
+          <br>
+              <div class="row" id="servicerow">
+                        <div id="centercardrow" class="col-sm-3 my-2">
+                          <a href="pm.html">
+                          <div class="card">
+                            <img class="card-img-top" src="./images/with-hunter2.jpg" alt="">
+                            <div class="card-body">
+                              <h4 class="card-title">Property Management</h4>
+                            </a>
+                            </div>
+                          </div>
+                        </div>
+                        <div id="centercardrow" class="col-sm-3 my-2">
+                            <a href="wdm.html">
+                          <div class="card">
+                            <img class="card-img-top" src="./images/BuckPhoto2.jpg" alt="">
+                            <div class="card-body">
+                              <h4 class="card-title">Whitetail Deer Management</h4>
+                            </a>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-sm-3 my-2">
+                          <a href="pondm.html">
+                          <div class="card">
+                            <img class="card-img-top" src="./images/Pond_Mist_Cattails.jpg" alt="">
+                            <div class="card-body">
+                              <h4 class="card-title">Pond Management</h4>
+                              </a>
+                            </div>
+                          </div>
+                        </div>
+                        <div id="centercardrow" class="col-sm-3 my-2">
+                            <a href="restoration.html">
+                          <div class="card">
+                            <img class="card-img-top" src="./images/2020photos/IMG_0336.jpg" alt="">
+                            <div class="card-body">
+                              <h4 class="card-title">Habitat Restoration</h4>
+                            </a>
+                            </div>
+                          </div>
+                        </div>
                 </div>
-              </div>
-              <div class="col-sm-4 my-4">
-                  <a href="wdm.html">
-                <div class="card">
-                  <img class="card-img-top" src="./images/BuckPhoto.jpg" alt="">
-                  <div class="card-body">
-                    <h4 class="card-title">Whitetail Deer Management</h4>
-                  </a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-sm-4 my-4">
-                <a href="nwc.html">
-                <div class="card">
-                  <img class="card-img-top" src="./images/CanadaGeese.jpg" alt="">
-                  <div class="card-body">
-                    <h4 class="card-title">Nuisance Wildlife Control</h4>
-                  </a>
-                  </div>
-                </div>
-              </div>
 
-            </div>
-            <!-- /.row -->
-            <div class="row">
-              <div class="col-sm-4 my-4">
-                <a href="pondm.html">
-                <div class="card">
-                  <img class="card-img-top" src="./images/Pond_Mist_Cattails.jpg" alt="">
-                  <div class="card-body">
-                    <h4 class="card-title">Pond Management</h4>
-                    </a>
-                  </div>
+              <div class="row" id="servicerow">
+                        <div class="col-sm-3 my-2">
+                          <a href="nwc.html">
+                          <div class="card">
+                            <img class="card-img-top" src="./images/CanadaGeese2.jpg" alt="">
+                            <div class="card-body">
+                              <h4 class="card-title">Nuisance Wildlife Control</h4>
+                            </a>
+                            </div>
+                          </div>
+                        </div>
+                        <div id="centercardrow"class="col-sm-3 my-2">
+                          <a href="gallery.html">
+                          <div class="card">
+                            <img class="card-img-top" src="./images/Grapevines.jpg" alt="">
+                            <div class="card-body">
+                              <h4 class="card-title">Gallery</h4>
+                            </a>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-sm-3 my-2">
+                          <a href="cc.html">
+                          <div class="card">
+                            <img class="card-img-top" src="./images/trappehill1.jpg" alt="">
+                            <div class="card-body">
+                              <h4 class="card-title">Client Case Studies</h4>
+                            </a>
+                            </div>
+                          </div>
+                        </div>
                 </div>
-              </div>
-              <div class="col-sm-4 my-4">
-                <a href="cc.html">
-                <div class="card">
-                  <img class="card-img-top" src="./images/trappehill1.jpg" alt="">
-                  <div class="card-body">
-                    <h4 class="card-title">Client Case Studies</h4>
-                  </a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-sm-4 my-4">
-                <a href="gallery.html">
-                <div class="card">
-                  <img class="card-img-top" src="./images/Grapevines.jpg" alt="">
-                  <div class="card-body">
-                    <h4 class="card-title">Gallery</h4>
-                  </a>
-                  </div>
-                </div>
-              </div>
 
-            </div>
+                      <!-- /.row -->
+
+
+                    </div>
           </div>
 
           <!--  service card ends-->
@@ -206,7 +224,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
-        <h5 class="m-0 text-center text-white">Copyright &copy; M.Simmons 2018</h5>
+        <h5 class="m-0 text-center text-white">Copyright &copy; M.Simmons 2020</h5>
       </div>
       <!-- /.container -->
     </footer>
