--- a/gallery.html
+++ b/gallery.html
@@ -114,7 +114,7 @@
 
     <div class="row">
       <div class="col-sm-8">
-          <p class="home-txt">Click the images below to see larger version</p>
+          <p id="topwrapper" class="home-txt">Click the images below to see larger version</p>
 <br/>
 <br/>
   </div>
@@ -122,6 +122,86 @@
 
 
  <div class="row text-center text-lg-left">
+   <div class="col-lg-3 col-md-4 col-xs-6">
+   <a data-fancybox="gallery" href="images/Large/2020/0528.JPG">
+          <img class="img-fluid img-thumbnail" src="images/Large/2020/0528.JPG" alt="">
+        </a>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6">
+      <a data-fancybox="gallery" href="images/Large/2020/0536.JPG">
+             <img class="img-fluid img-thumbnail" src="images/Large/2020/0536.JPG" alt="">
+           </a>
+         </div>
+         <div class="col-lg-3 col-md-4 col-xs-6">
+         <a data-fancybox="gallery" href="images/Large/2020/0094.JPG">
+                <img class="img-fluid img-thumbnail" src="images/Large/2020/0094.JPG" alt="">
+              </a>
+            </div>
+          <div class="col-lg-3 col-md-4 col-xs-6">
+       <a data-fancybox="gallery" href="images/Large/IMG_0434_lg.JPG">
+              <img class="img-fluid img-thumbnail" src="images/Thumbs/IMG_0434.JPG" alt="">
+            </a>
+          </div>
+          <div class="col-lg-3 col-md-4 col-xs-6">
+          <a data-fancybox="gallery" href="images/Large/2020/0275.JPG">
+                 <img class="img-fluid img-thumbnail" src="images/Large/2020/0275.JPG" alt="">
+               </a>
+             </div>
+           <div class="col-lg-3 col-md-4 col-xs-6">
+           <a data-fancybox="gallery" href="images/Large/2020/0264.JPG">
+                  <img class="img-fluid img-thumbnail" src="images/Large/2020/0264.JPG" alt="">
+                </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-xs-6">
+              <a data-fancybox="gallery" href="images/Large/2020/0266.JPG">
+                     <img class="img-fluid img-thumbnail" src="images/Large/2020/0266.JPG" alt="">
+                   </a>
+                 </div>
+                 <div class="col-lg-3 col-md-4 col-xs-6">
+                 <a data-fancybox="gallery" href="images/Large/2020/0267.JPG">
+                        <img class="img-fluid img-thumbnail" src="images/Large/2020/0267.JPG" alt="">
+                      </a>
+                    </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+        <a data-fancybox="gallery" href="images/Large/2020/0276.JPG">
+               <img class="img-fluid img-thumbnail" src="images/Large/2020/0276.JPG" alt="">
+             </a>
+           </div>
+           <div class="col-lg-3 col-md-4 col-xs-6">
+           <a data-fancybox="gallery" href="images/Large/2020/0304.JPG">
+                  <img class="img-fluid img-thumbnail" src="images/Large/2020/0304.JPG" alt="">
+                </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-xs-6">
+              <a data-fancybox="gallery" href="images/Large/2020/0336.JPG">
+                     <img class="img-fluid img-thumbnail" src="images/Large/2020/0336.JPG" alt="">
+                   </a>
+                 </div>
+                 <div class="col-lg-3 col-md-4 col-xs-6">
+                 <a data-fancybox="gallery" href="images/Large/2020/0338.JPG">
+                        <img class="img-fluid img-thumbnail" src="images/Large/2020/0338.JPG" alt="">
+                      </a>
+                    </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+        <a data-fancybox="gallery" href="images/Large/2020/0339.JPG">
+               <img class="img-fluid img-thumbnail" src="images/Large/2020/0339.JPG" alt="">
+             </a>
+           </div>
+           <div class="col-lg-3 col-md-4 col-xs-6">
+           <a data-fancybox="gallery" href="images/Large/2020/0355.JPG">
+                  <img class="img-fluid img-thumbnail" src="images/Large/2020/0355.JPG" alt="">
+                </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-xs-6">
+              <a data-fancybox="gallery" href="images/Large/2020/0517.JPG">
+                     <img class="img-fluid img-thumbnail" src="images/Large/2020/0517.JPG" alt="">
+                   </a>
+                 </div>
+                 <div class="col-lg-3 col-md-4 col-xs-6">
+                 <a data-fancybox="gallery" href="images/Large/2020/0524.JPG">
+                        <img class="img-fluid img-thumbnail" src="images/Large/2020/0524.JPG" alt="">
+                      </a>
+                    </div>
 
    <div class="col-lg-3 col-md-4 col-xs-6">
 <a data-fancybox="gallery" href="images/Large/ailanthusClose_lg.jpg">
@@ -303,16 +383,30 @@
        <img class="img-fluid img-thumbnail" src="images/Thumbs/wildflowers.jpg" alt="">
      </a>
    </div>
-   <div class="col-lg-3 col-md-4 col-xs-6">
-<a data-fancybox="gallery" href="images/Large/IMG_0443_lg.jpg">
-       <img class="img-fluid img-thumbnail" src="images/Thumbs/IMG_0443.jpg" alt="">
+
+
+
+<div class="col-lg-3 col-md-4 col-xs-6">
+<a data-fancybox="gallery" href="images/Large/2020/011.jpg">
+       <img class="img-fluid img-thumbnail" src="images/Large/2020/011.jpg" alt="">
      </a>
    </div>
    <div class="col-lg-3 col-md-4 col-xs-6">
-<a data-fancybox="gallery" href="images/Large/IMG_0434_lg.jpg">
-       <img class="img-fluid img-thumbnail" src="images/Thumbs/IMG_0434.jpg" alt="">
-     </a>
-   </div>
+   <a data-fancybox="gallery" href="images/Large/2020/0049.JPG">
+          <img class="img-fluid img-thumbnail" src="images/Large/2020/0049.JPG" alt="">
+        </a>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6">
+   <a data-fancybox="gallery" href="images/Large/IMG_0443_lg.JPG">
+          <img class="img-fluid img-thumbnail" src="images/Thumbs/IMG_0443.JPG" alt="">
+        </a>
+      </div>
+         <div class="col-lg-3 col-md-4 col-xs-6">
+         <a data-fancybox="gallery" href="images/Large/2020/0113.JPG">
+                <img class="img-fluid img-thumbnail" src="images/Large/2020/0113.JPG" alt="">
+              </a>
+            </div>
+
 
  </div>
 
@@ -328,74 +422,89 @@
 <br>
 <br>
 <br>
-<h1 id="services" class="display-3 text-center text-white mt-4">Our Services</h1>
-      <div class="row">
-        <div class="col-sm-4 my-4">
-          <a href="pm.html">
-          <div class="card">
-            <img class="card-img-top" src="./images/with-hunter.jpg" alt="">
-            <div class="card-body">
-              <h4 class="card-title">Property Management</h4>
-            </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-4 my-4">
-            <a href="wdm.html">
-          <div class="card">
-            <img class="card-img-top" src="./images/BuckPhoto.jpg" alt="">
-            <div class="card-body">
-              <h4 class="card-title">Whitetail Deer Management</h4>
-            </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-4 my-4">
-          <a href="nwc.html">
-          <div class="card">
-            <img class="card-img-top" src="./images/CanadaGeese.jpg" alt="">
-            <div class="card-body">
-              <h4 class="card-title">Nuisance Wildlife Control</h4>
-            </a>
-            </div>
-          </div>
-        </div>
-
+<div>
+          <h1 class="display-3 text-center text-white mt-4">Our Services</h1>
+<br>
+    <div class="row" id="servicerow">
+              <div id="centercardrow" class="col-sm-3 my-2">
+                <a href="pm.html">
+                <div class="card">
+                  <img class="card-img-top" src="./images/with-hunter2.jpg" alt="">
+                  <div class="card-body">
+                    <h4 class="card-title">Property Management</h4>
+                  </a>
+                  </div>
+                </div>
+              </div>
+              <div id="centercardrow" class="col-sm-3 my-2">
+                  <a href="wdm.html">
+                <div class="card">
+                  <img class="card-img-top" src="./images/BuckPhoto2.jpg" alt="">
+                  <div class="card-body">
+                    <h4 class="card-title">Whitetail Deer Management</h4>
+                  </a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-3 my-2">
+                <a href="pondm.html">
+                <div class="card">
+                  <img class="card-img-top" src="./images/Pond_Mist_Cattails.jpg" alt="">
+                  <div class="card-body">
+                    <h4 class="card-title">Pond Management</h4>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div id="centercardrow" class="col-sm-3 my-2">
+                  <a href="restoration.html">
+                <div class="card">
+                  <img class="card-img-top" src="./images/2020photos/IMG_0336.jpg" alt="">
+                  <div class="card-body">
+                    <h4 class="card-title">Habitat Restoration</h4>
+                  </a>
+                  </div>
+                </div>
+              </div>
       </div>
-      <!-- /.row -->
-      <div class="row">
-        <div class="col-sm-4 my-4">
-          <a href="pondm.html">
-          <div class="card">
-            <img class="card-img-top" src="./images/Pond_Mist_Cattails.jpg" alt="">
-            <div class="card-body">
-              <h4 class="card-title">Pond Management</h4>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-4 my-4">
-          <a href="cc.html">
-          <div class="card">
-            <img class="card-img-top" src="./images/trappehill1.jpg" alt="">
-            <div class="card-body">
-              <h4 class="card-title">Client Case Studies</h4>
-            </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-4 my-4">
-          <a href="gallery.html">
-          <div class="card">
-            <img class="card-img-top" src="./images/Grapevines.jpg" alt="">
-            <div class="card-body">
-              <h4 class="card-title">Gallery</h4>
-            </a>
-            </div>
-          </div>
-        </div>
 
+    <div class="row" id="servicerow">
+              <div class="col-sm-3 my-2">
+                <a href="nwc.html">
+                <div class="card">
+                  <img class="card-img-top" src="./images/CanadaGeese2.jpg" alt="">
+                  <div class="card-body">
+                    <h4 class="card-title">Nuisance Wildlife Control</h4>
+                  </a>
+                  </div>
+                </div>
+              </div>
+              <div id="centercardrow"class="col-sm-3 my-2">
+                <a href="gallery.html">
+                <div class="card">
+                  <img class="card-img-top" src="./images/Grapevines.jpg" alt="">
+                  <div class="card-body">
+                    <h4 class="card-title">Gallery</h4>
+                  </a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-3 my-2">
+                <a href="cc.html">
+                <div class="card">
+                  <img class="card-img-top" src="./images/trappehill1.jpg" alt="">
+                  <div class="card-body">
+                    <h4 class="card-title">Client Case Studies</h4>
+                  </a>
+                  </div>
+                </div>
+              </div>
       </div>
+
+            <!-- /.row -->
+
+
+          </div>
     </div>
 
     <!--  service card ends-->
@@ -403,7 +512,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; M.Simmons 2018</p>
+        <p class="m-0 text-center text-white">Copyright &copy; M.Simmons 2020</p>
       </div>
       <!-- /.container -->
     </footer>
