--- a/pm.html
+++ b/pm.html
@@ -77,63 +77,72 @@
 
     </div> -->
 
-    <h1 class="display-3 text-center text-white mt-4">PROPERTY MANAGEMENT</h1>
 
 
+<br>
   <!-- Page Content -->
   <div class="service_container">
-
   <div class="row">
   <div class="col-sm-8">
+<h1 class="display-3 text-center text-white mt-4">PROPERTY MANAGEMENT</h1>
+<br>
+  <div id="topwrapper">
 
 
-  <h2 class="mt-4 navbar-brand">Hunt Country offers a variety of services to maximize property's natural resources:</h2>
 
+  <p id="midhead">Hunt Country offers a variety of services to maximize property's natural resources:</p>
 
-
+<div>
   <a data-fancybox="gallery" href="images/Svcs/hunt1_pm.jpg">
-      <img id="hunter" class="col-sm-8"src="images/Svcs/hunt1_pm.jpg" alt="">
+      <img id="hunter" class="col-sm-8" src="images/Svcs/hunt1_pm.jpg" alt="">
     </a>
+
   <br>
-<p><strong class="navbar-brand">Leases:</strong></p>
+
+<p id="midhead">Leases:</p>
   <br>
   <p>As development continues to consume vast amounts of land in the Northern Virginia area, open spaces have become harder to find. Many property owners have benefited from the increase in demand for recreational land by leasing their property to clubs or individuals. Leases not only generate extra revenue for the land owner, but they can also assist in managing the property's wildlife populations and increase property security. The majority of leases are set up for hunting, but other leases can be set up for camping, ATV riding, fishing and horseback riding. Hunt Country can help set up and manage your lease and act as a liaison between you, hunters, neighbors and others that use the property.</p>
 <br>
-  <p>
-    <strong class="navbar-brand">Other Benifits of Leases:</strong>
-  </p>
+</div>
+<br>
+<br>
+
+<div class="black">
+
+        <div id="pmbenifits">
+          <p id="midhead">Other Benifits of Leases:</p>
+          <p>
+          <ul>
+            <li>Signage (posting) and gating of property</li>
+            <li>Presence on properties which are normally vacant</li>
+            <li>Reduced trespassing, vandalism and dumping</li>
+            <li>Managed game species populations</li>
+          </ul>
+          </p>
+        </div>
+        <div id="pmservices">
+          <p id="midhead">Services Offered:</p>
+
+            <p>
+            <ul>
+              <li>Invasive Species Control</li>
+              <li>Herbicide Application</li>
+              <li>Soil Testing</li>
+              <li>Native Plantings</li>
+              <li>Pruning and Fertilization</li>
+              <li>Food Plots</li>
+              <li>Riparian Buffer and Wildlife Corridor Establishment</li>
+              <li>Bird Box Installation</li>
+            </ul>
+            </p>
+          </div>
+</div>
+</div>
+    </div>
+    </div>
+</div>
 
 
-
-  <p>
-  <ul>
-    <li>Signage (posting) and gating of property</li>
-    <li>Presence on properties which are normally vacant</li>
-    <li>Reduced trespassing, vandalism and dumping</li>
-    <li>Managed game species populations</li>
-  </ul>
-  </p>
-
-  <p>
-  <strong class="navbar-brand">Services Offered:</strong>
-  </p>
-
-  <p>
-  <ul>
-    <li>Invasive Species Control</li>
-    <li>Herbicide Application</li>
-    <li>Soil Testing</li>
-    <li>Native Plantings</li>
-    <li>Pruning and Fertilization</li>
-    <li>Food Plots</li>
-    <li>Riparian Buffer and Wildlife Corridor Establishment</li>
-    <li>Bird Box Installation</li>
-  </ul>
-  </p>
-
-  </div>
-  </div>
-  </div>
 
 
       <!-- service cards -->
@@ -141,74 +150,89 @@
           <br>
           <br>
           <br>
-          <h1 id="services" class="display-3 text-center text-white mt-4">Our Services</h1>
-            <div class="row">
-              <div class="col-sm-4 my-4">
-                <a href="pm.html">
-                <div class="card">
-                  <img class="card-img-top" src="./images/with-hunter.jpg" alt="">
-                  <div class="card-body">
-                    <h4 class="card-title">Property Management</h4>
-                  </a>
-                  </div>
+          <div>
+                    <h1 class="display-3 text-center text-white mt-4">Our Services</h1>
+          <br>
+              <div class="row" id="servicerow">
+                        <div id="centercardrow" class="col-sm-3 my-2">
+                          <a href="pm.html">
+                          <div class="card">
+                            <img class="card-img-top" src="./images/with-hunter2.jpg" alt="">
+                            <div class="card-body">
+                              <h4 class="card-title">Property Management</h4>
+                            </a>
+                            </div>
+                          </div>
+                        </div>
+                        <div id="centercardrow" class="col-sm-3 my-2">
+                            <a href="wdm.html">
+                          <div class="card">
+                            <img class="card-img-top" src="./images/BuckPhoto2.jpg" alt="">
+                            <div class="card-body">
+                              <h4 class="card-title">Whitetail Deer Management</h4>
+                            </a>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-sm-3 my-2">
+                          <a href="pondm.html">
+                          <div class="card">
+                            <img class="card-img-top" src="./images/Pond_Mist_Cattails.jpg" alt="">
+                            <div class="card-body">
+                              <h4 class="card-title">Pond Management</h4>
+                              </a>
+                            </div>
+                          </div>
+                        </div>
+                        <div id="centercardrow" class="col-sm-3 my-2">
+                            <a href="restoration.html">
+                          <div class="card">
+                            <img class="card-img-top" src="./images/2020photos/IMG_0336.jpg" alt="">
+                            <div class="card-body">
+                              <h4 class="card-title">Habitat Restoration</h4>
+                            </a>
+                            </div>
+                          </div>
+                        </div>
                 </div>
-              </div>
-              <div class="col-sm-4 my-4">
-                  <a href="wdm.html">
-                <div class="card">
-                  <img class="card-img-top" src="./images/BuckPhoto.jpg" alt="">
-                  <div class="card-body">
-                    <h4 class="card-title">Whitetail Deer Management</h4>
-                  </a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-sm-4 my-4">
-                <a href="nwc.html">
-                <div class="card">
-                  <img class="card-img-top" src="./images/CanadaGeese.jpg" alt="">
-                  <div class="card-body">
-                    <h4 class="card-title">Nuisance Wildlife Control</h4>
-                  </a>
-                  </div>
-                </div>
-              </div>
 
-            </div>
-            <!-- /.row -->
-            <div class="row">
-              <div class="col-sm-4 my-4">
-                <a href="pondm.html">
-                <div class="card">
-                  <img class="card-img-top" src="./images/Pond_Mist_Cattails.jpg" alt="">
-                  <div class="card-body">
-                    <h4 class="card-title">Pond Management</h4>
-                    </a>
-                  </div>
+              <div class="row" id="servicerow">
+                        <div class="col-sm-3 my-2">
+                          <a href="nwc.html">
+                          <div class="card">
+                            <img class="card-img-top" src="./images/CanadaGeese2.jpg" alt="">
+                            <div class="card-body">
+                              <h4 class="card-title">Nuisance Wildlife Control</h4>
+                            </a>
+                            </div>
+                          </div>
+                        </div>
+                        <div id="centercardrow"class="col-sm-3 my-2">
+                          <a href="gallery.html">
+                          <div class="card">
+                            <img class="card-img-top" src="./images/Grapevines.jpg" alt="">
+                            <div class="card-body">
+                              <h4 class="card-title">Gallery</h4>
+                            </a>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-sm-3 my-2">
+                          <a href="cc.html">
+                          <div class="card">
+                            <img class="card-img-top" src="./images/trappehill1.jpg" alt="">
+                            <div class="card-body">
+                              <h4 class="card-title">Client Case Studies</h4>
+                            </a>
+                            </div>
+                          </div>
+                        </div>
                 </div>
-              </div>
-              <div class="col-sm-4 my-4">
-                <a href="cc.html">
-                <div class="card">
-                  <img class="card-img-top" src="./images/trappehill1.jpg" alt="">
-                  <div class="card-body">
-                    <h4 class="card-title">Client Case Studies</h4>
-                  </a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-sm-4 my-4">
-                <a href="gallery.html">
-                <div class="card">
-                  <img class="card-img-top" src="./images/Grapevines.jpg" alt="">
-                  <div class="card-body">
-                    <h4 class="card-title">Gallery</h4>
-                  </a>
-                  </div>
-                </div>
-              </div>
 
-            </div>
+                      <!-- /.row -->
+
+
+                    </div>
           </div>
 
           <!--  service card ends-->
@@ -216,7 +240,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
-        <h5 class="m-0 text-center text-white">Copyright &copy; M.Simmons 2018</h5>
+        <h5 class="m-0 text-center text-white">Copyright &copy; M.Simmons 2020</h5>
       </div>
       <!-- /.container -->
     </footer>
