--- a/wdm.html
+++ b/wdm.html
@@ -81,9 +81,9 @@
 
 
     <h1 class="display-3 text-center text-white mt-4"><strong>WHITETAIL DEER MANAGEMENT</strong></h1>
-
+<br>
 <!-- Page Content -->
-<div class="service_container">
+<div id="topwrapper" class="service_container">
 
 <div class="row">
 <div class="col-sm-8">
@@ -94,9 +94,9 @@
 
 
   <p>The whitetail deer (Odocoileus virginianus) population has exploded in Northern Virginia over the past decade.  As described in the <a href="https://www.dgif.virginia.gov/wildlife/deer/management-plan/" target="_blank">Virginia Deer Management Plan 2015-2024</a> under optimal conditions, a deer population can double in size annually.  With no regulating factor (e.g., predators, hunters), a deer population would expand to where some resources, generally food, would become scarce.  Sources of mortality other then hunting (e.g., diseases, injury, predation) are typically not sufficient to control deer populations.  Active deer management is necessary to maintain deer populations to meet the needs of the citizens of the Commonwealth.  An optimum deer population balances positive demands (e.g., hunting, viewing) with negative demands (e.g., agricultural damage, vehicle collisions, ecosystem impacts).   </p>
-
 <br>
-      <p class="navbar-brand">Some of the devastating results an over populated deer herd have on a property can include:</p>
+<br>
+      <p id="midhead">Some of the devastating results an over populated deer herd have on a property can include:</p>
 
 
  <p>
@@ -106,18 +106,16 @@
     <li>Competition between deer and livestock for grazing area</li>
   </ul>
 </p>
+<br>
 <a data-fancybox="gallery" href="images/Svcs/deer1_wdm.jpg">
     <img id="horn" class="col-sm-8" src="images/Svcs/deer1_wdm.jpg" alt="">
   </a>
-      <p>
-      <strong class="navbar-brand">Why control deer populations?</strong>
-      </p>
+      <p id="midhead">Why control deer populations?</p>
       <br>
   <p>Controlled population increases overall health of the deer herd by helping to limit the spread of diseases, such as Chronic Wasting Disease (CWD) and Epizootic Hemorrhagic Disease (Blue Tounge) ), reducing malnutrition and parasitism , and reducing human interaction (i.e., fewer accidents with cars, less grazing near house, gardens, and landscaping). </p>
 <br>
-  <p>
-  <strong class="navbar-brand">Methods for controlling deer populations:</strong>
-  </p>
+<br>
+  <p id="midhead">Methods for controlling deer populations:</p>
   <br>
 <p class="navbar-brand">Deer Culling</p>
 <p>On properties where hunting isn’t permitted, due to security and safety concerns, culling may be an option.  Culling is usually done at night with a suppressed (silencer) high power rifle.  Hunt Country takes a humane/discreet approach when performing culling operations.  We will coordinate with the local Conservation Police to obtain the necessary permits.  All deer harvested are donated to <a href="http://www.h4hungry.org" target="_blank">Hunters for the Hungry</a>, a non-profit organization that helps local families in need.
@@ -131,7 +129,7 @@
 <p>
 <strong class="navbar-brand">Quality Deer Management (QDM)</strong>
 </p>
-<br>
+
 <p>Each year more and more land owners are seeing the benifits as a result of applying The <a href="https://www.qdma.com/mission-and-history/" target="_blank">Quality Deer Management Philosophy</a> to their property. For those land owners and hunters who want to have the opportunity to hunt trophy deer right here in Northern Virginia, Hunt Country can develop a Quality Deer management Program tailored to your property.  Although the most important aspect of growing trophy white-tails on any property is to let male deer reach maturity (4-6 years old) there are still other management techniques that can be utilized to increase a property’s potential to produce big deer:
 </p>
 <br>
@@ -156,74 +154,89 @@
           <br>
           <br>
           <br>
-          <h1 id="services" class="display-3 text-center text-white mt-4">Our Services</h1>
-            <div class="row">
-              <div class="col-sm-4 my-4">
-                <a href="pm.html">
-                <div class="card">
-                  <img class="card-img-top" src="./images/with-hunter.jpg" alt="">
-                  <div class="card-body">
-                    <h4 class="card-title">Property Management</h4>
-                  </a>
-                  </div>
+          <div>
+                    <h1 class="display-3 text-center text-white mt-4">Our Services</h1>
+          <br>
+              <div class="row" id="servicerow">
+                        <div id="centercardrow" class="col-sm-3 my-2">
+                          <a href="pm.html">
+                          <div class="card">
+                            <img class="card-img-top" src="./images/with-hunter2.jpg" alt="">
+                            <div class="card-body">
+                              <h4 class="card-title">Property Management</h4>
+                            </a>
+                            </div>
+                          </div>
+                        </div>
+                        <div id="centercardrow" class="col-sm-3 my-2">
+                            <a href="wdm.html">
+                          <div class="card">
+                            <img class="card-img-top" src="./images/BuckPhoto2.jpg" alt="">
+                            <div class="card-body">
+                              <h4 class="card-title">Whitetail Deer Management</h4>
+                            </a>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-sm-3 my-2">
+                          <a href="pondm.html">
+                          <div class="card">
+                            <img class="card-img-top" src="./images/Pond_Mist_Cattails.jpg" alt="">
+                            <div class="card-body">
+                              <h4 class="card-title">Pond Management</h4>
+                              </a>
+                            </div>
+                          </div>
+                        </div>
+                        <div id="centercardrow" class="col-sm-3 my-2">
+                            <a href="restoration.html">
+                          <div class="card">
+                            <img class="card-img-top" src="./images/2020photos/IMG_0336.jpg" alt="">
+                            <div class="card-body">
+                              <h4 class="card-title">Habitat Restoration</h4>
+                            </a>
+                            </div>
+                          </div>
+                        </div>
                 </div>
-              </div>
-              <div class="col-sm-4 my-4">
-                  <a href="wdm.html">
-                <div class="card">
-                  <img class="card-img-top" src="./images/BuckPhoto.jpg" alt="">
-                  <div class="card-body">
-                    <h4 class="card-title">Whitetail Deer Management</h4>
-                  </a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-sm-4 my-4">
-                <a href="nwc.html">
-                <div class="card">
-                  <img class="card-img-top" src="./images/CanadaGeese.jpg" alt="">
-                  <div class="card-body">
-                    <h4 class="card-title">Nuisance Wildlife Control</h4>
-                  </a>
-                  </div>
-                </div>
-              </div>
 
-            </div>
-            <!-- /.row -->
-            <div class="row">
-              <div class="col-sm-4 my-4">
-                <a href="pondm.html">
-                <div class="card">
-                  <img class="card-img-top" src="./images/Pond_Mist_Cattails.jpg" alt="">
-                  <div class="card-body">
-                    <h4 class="card-title">Pond Management</h4>
-                    </a>
-                  </div>
+              <div class="row" id="servicerow">
+                        <div class="col-sm-3 my-2">
+                          <a href="nwc.html">
+                          <div class="card">
+                            <img class="card-img-top" src="./images/CanadaGeese2.jpg" alt="">
+                            <div class="card-body">
+                              <h4 class="card-title">Nuisance Wildlife Control</h4>
+                            </a>
+                            </div>
+                          </div>
+                        </div>
+                        <div id="centercardrow"class="col-sm-3 my-2">
+                          <a href="gallery.html">
+                          <div class="card">
+                            <img class="card-img-top" src="./images/Grapevines.jpg" alt="">
+                            <div class="card-body">
+                              <h4 class="card-title">Gallery</h4>
+                            </a>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-sm-3 my-2">
+                          <a href="cc.html">
+                          <div class="card">
+                            <img class="card-img-top" src="./images/trappehill1.jpg" alt="">
+                            <div class="card-body">
+                              <h4 class="card-title">Client Case Studies</h4>
+                            </a>
+                            </div>
+                          </div>
+                        </div>
                 </div>
-              </div>
-              <div class="col-sm-4 my-4">
-                <a href="cc.html">
-                <div class="card">
-                  <img class="card-img-top" src="./images/trappehill1.jpg" alt="">
-                  <div class="card-body">
-                    <h4 class="card-title">Client Case Studies</h4>
-                  </a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-sm-4 my-4">
-                <a href="gallery.html">
-                <div class="card">
-                  <img class="card-img-top" src="./images/Grapevines.jpg" alt="">
-                  <div class="card-body">
-                    <h4 class="card-title">Gallery</h4>
-                  </a>
-                  </div>
-                </div>
-              </div>
 
-            </div>
+                      <!-- /.row -->
+
+
+                    </div>
           </div>
 
           <!--  service card ends-->
@@ -231,7 +244,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
-        <h5 class="m-0 text-center text-white">Copyright &copy; M.Simmons 2018</h5>
+        <h5 class="m-0 text-center text-white">Copyright &copy; M.Simmons 2020</h5>
       </div>
       <!-- /.container -->
     </footer>
