--- a/nmr.html
+++ b/nmr.html
@@ -158,74 +158,89 @@
           <br>
           <br>
           <br>
-          <h1 id="services" class="display-3 text-center text-white mt-4">Our Services</h1>
-            <div class="row">
-              <div class="col-sm-4 my-4">
-                <a href="pm.html">
-                <div class="card">
-                  <img class="card-img-top" src="./images/with-hunter.jpg" alt="">
-                  <div class="card-body">
-                    <h4 class="card-title">Property Management</h4>
-                  </a>
-                  </div>
+          <div>
+                    <h1 class="display-3 text-center text-white mt-4">Our Services</h1>
+          <br>
+              <div class="row" id="servicerow">
+                        <div id="centercardrow" class="col-sm-3 my-2">
+                          <a href="pm.html">
+                          <div class="card">
+                            <img class="card-img-top" src="./images/with-hunter2.jpg" alt="">
+                            <div class="card-body">
+                              <h4 class="card-title">Property Management</h4>
+                            </a>
+                            </div>
+                          </div>
+                        </div>
+                        <div id="centercardrow" class="col-sm-3 my-2">
+                            <a href="wdm.html">
+                          <div class="card">
+                            <img class="card-img-top" src="./images/BuckPhoto2.jpg" alt="">
+                            <div class="card-body">
+                              <h4 class="card-title">Whitetail Deer Management</h4>
+                            </a>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-sm-3 my-2">
+                          <a href="pondm.html">
+                          <div class="card">
+                            <img class="card-img-top" src="./images/Pond_Mist_Cattails.jpg" alt="">
+                            <div class="card-body">
+                              <h4 class="card-title">Pond Management</h4>
+                              </a>
+                            </div>
+                          </div>
+                        </div>
+                        <div id="centercardrow" class="col-sm-3 my-2">
+                            <a href="restoration.html">
+                          <div class="card">
+                            <img class="card-img-top" src="./images/2020photos/IMG_0336.jpg" alt="">
+                            <div class="card-body">
+                              <h4 class="card-title">Habitat Restoration</h4>
+                            </a>
+                            </div>
+                          </div>
+                        </div>
                 </div>
-              </div>
-              <div class="col-sm-4 my-4">
-                  <a href="wdm.html">
-                <div class="card">
-                  <img class="card-img-top" src="./images/BuckPhoto.jpg" alt="">
-                  <div class="card-body">
-                    <h4 class="card-title">Whitetail Deer Management</h4>
-                  </a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-sm-4 my-4">
-                <a href="nwc.html">
-                <div class="card">
-                  <img class="card-img-top" src="./images/CanadaGeese.jpg" alt="">
-                  <div class="card-body">
-                    <h4 class="card-title">Nuisance Wildlife Control</h4>
-                  </a>
-                  </div>
-                </div>
-              </div>
 
-            </div>
-            <!-- /.row -->
-            <div class="row">
-              <div class="col-sm-4 my-4">
-                <a href="pondm.html">
-                <div class="card">
-                  <img class="card-img-top" src="./images/Pond_Mist_Cattails.jpg" alt="">
-                  <div class="card-body">
-                    <h4 class="card-title">Pond Management</h4>
-                    </a>
-                  </div>
+              <div class="row" id="servicerow">
+                        <div class="col-sm-3 my-2">
+                          <a href="nwc.html">
+                          <div class="card">
+                            <img class="card-img-top" src="./images/CanadaGeese2.jpg" alt="">
+                            <div class="card-body">
+                              <h4 class="card-title">Nuisance Wildlife Control</h4>
+                            </a>
+                            </div>
+                          </div>
+                        </div>
+                        <div id="centercardrow"class="col-sm-3 my-2">
+                          <a href="gallery.html">
+                          <div class="card">
+                            <img class="card-img-top" src="./images/Grapevines.jpg" alt="">
+                            <div class="card-body">
+                              <h4 class="card-title">Gallery</h4>
+                            </a>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-sm-3 my-2">
+                          <a href="cc.html">
+                          <div class="card">
+                            <img class="card-img-top" src="./images/trappehill1.jpg" alt="">
+                            <div class="card-body">
+                              <h4 class="card-title">Client Case Studies</h4>
+                            </a>
+                            </div>
+                          </div>
+                        </div>
                 </div>
-              </div>
-              <div class="col-sm-4 my-4">
-                <a href="cc.html">
-                <div class="card">
-                  <img class="card-img-top" src="./images/trappehill1.jpg" alt="">
-                  <div class="card-body">
-                    <h4 class="card-title">Client Case Studies</h4>
-                  </a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-sm-4 my-4">
-                <a href="gallery.html">
-                <div class="card">
-                  <img class="card-img-top" src="./images/Grapevines.jpg" alt="">
-                  <div class="card-body">
-                    <h4 class="card-title">Gallery</h4>
-                  </a>
-                  </div>
-                </div>
-              </div>
 
-            </div>
+                      <!-- /.row -->
+
+
+                    </div>
           </div>
 
           <!--  service card ends-->
