--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
 
     <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap-grid.min.css" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap-reboot.css" rel="stylesheet">
+      <link href="vendor/bootstrap/css/bootstrap-reboot.min.css" rel="stylesheet">
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Stylish" rel="stylesheet">
 
@@ -19,6 +22,8 @@
     <!-- Custom styles for this template -->
 <link href="css/reset.css" rel="stylesheet">
     <link href="css/business-frontpage.css" rel="stylesheet">
+
+
 
   </head>
 
