--- a/gallery.html
+++ b/gallery.html
@@ -138,8 +138,8 @@
               </a>
             </div>
           <div class="col-lg-3 col-md-4 col-xs-6">
-       <a data-fancybox="gallery" href="images/Large/IMG_0434_lg.JPG">
-              <img class="img-fluid img-thumbnail" src="images/Thumbs/IMG_0434.JPG" alt="">
+       <a data-fancybox="gallery" href="images/Large/0434_lg.JPG">
+              <img class="img-fluid img-thumbnail" src="images/Thumbs/0434.JPG" alt="">
             </a>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6">
@@ -397,8 +397,8 @@
         </a>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6">
-   <a data-fancybox="gallery" href="images/Large/IMG_0443_lg.JPG">
-          <img class="img-fluid img-thumbnail" src="images/Thumbs/IMG_0443.JPG" alt="">
+   <a data-fancybox="gallery" href="images/Large/0443_lg.JPG">
+          <img class="img-fluid img-thumbnail" src="images/Thumbs/0443.JPG" alt="">
         </a>
       </div>
          <div class="col-lg-3 col-md-4 col-xs-6">
